# droply

./: .env  .gitignore  DEPLOYMENT.md  PROJECT_SUMMARY.md  QUICK_START.md  README.md  asconfig.json  env.example  next.config.js  package-lock.json  package.json  setup.bat  setup.sh  tailwind.config.js  tsconfig.json
.github/workflows/: ci.yml
prisma/: schema.prisma
public/: train.md
public/docs/: file-extensions.md
scripts/: test-advanced-apis.js  test-apis-working.js  test-auto-rate-limit.js  test-checksum-upload.js  test-compression-pipeline.js  test-compression-simple.js  test-compression.js  test-db-upload.js  test-edge-rate-limit.js  test-file-extensions.js  test-info-api.js  test-new-upload.js  test-performance.js  test-rate-limit.js  test-redis-rate-limit.js  test-sidebar-shortcut.js  test-simple-upload.js  test-wasm-module.js
src/: middleware.ts
src/app/: global-error.tsx  globals.css  layout.tsx  not-found.tsx  page.tsx
src/components/: CompressionDemo.tsx  CookieConsent.tsx  CookieConsentBanner.tsx  FileExtensionDemo.tsx  PasswordDialog.tsx  PasswordProtectedDialog.tsx  PasswordVerification.tsx
src/hooks/: useCookieConsent.ts  usePasswordProtectedAPI.ts  usePasswordProtection.ts
src/lib/: config.ts  cookies.ts  db.ts  env.ts  fileStorage.ts  id.ts  localFileStorage.ts  password.ts  prisma.ts  r2.ts  rateLimit.ts  redis.ts  schemas.ts  theme.tsx
src/pages/: _app.tsx  index.tsx
src/styles/: globals.css
src/types/: file.ts
wasm/: .gitignore  PUBLISHING.md  README.md  build.sh  package-cli.json  package-lock.json  package.json  publish-plugins.sh  rollup.config.js  test-embedded-metadata.ts  tsconfig.json
wasm/crates/archive/tar/: Cargo.toml
wasm/crates/archive/tar/src/: lib.rs
wasm/crates/archive/zip/: Cargo.toml
wasm/crates/archive/zip/src/: lib.rs
wasm/crates/compression/brotli/: Cargo.toml
wasm/crates/compression/brotli/src/: lib.rs
wasm/crates/compression/gzip/: Cargo.toml
wasm/crates/compression/gzip/src/: lib.rs
wasm/scripts/: conformance.sh  gen_exports.py  gen_plugin_packages.py  parse-cargo.py  publish-all.py  publish-plugins.py  validate.js
wasm/utils/: archiver.ts  compressor.ts  dynamic-registry.ts  enhanced-archiver.ts  loader.ts  performance.ts  (+1 more)
(+66 files in other folders)
