[package]
name = "droply-archive-tar"
version = "0.1.0"
edition = "2021"

[package.metadata.droply]
type = "archive"
format = "tar"
extensions = ["tar"]
description = "TAR archive format"
features = ["metadata-embedding"]

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
serde = { version = "1", features = ["derive"] }
serde_bytes = "0.11"
serde-wasm-bindgen = "0.6"
tar = "0.4"
