[package]
name = "droply-compression-gzip"
version = "0.1.0"
edition = "2021"

[package.metadata.droply]
type = "compression"
algorithm = "gzip"
extensions = ["gz"]
description = "Gzip compression algorithm"
compression_levels = { min = 0, max = 9, default = 6 }

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
serde = { version = "1", features = ["derive"] }
serde_bytes = "0.11"
serde-wasm-bindgen = "0.6"
flate2 = { version = "1.0", default-features = false, features = ["rust_backend"] }
